<?xml version="1.0"?>
<package format="2">
  <name>limo_robot_localization</name>
  <version>0.1.0</version>
  <description>EKF-based odom→base_link localization for LIMO</description>

  <maintainer email="you@example.com">Joohee Cho</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
