<?xml version="1.0"?>
<package format="2">
  <name>limo_slam_gmapping</name>
  <version>0.1.0</version>
  <description>GMapping-based 2D SLAM setup for LIMO</description>

  <maintainer email="you@example.com">Joohee Cho</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
